@@ -9,6 +9,7 @@ Version 1.7.9+svn:
  * User interface:
    * Don't reserve space for scrollbars in message dialogs.
    * Ctrl-f for fullscreen works again in the MP lobby.
+   * Resizing the MP lobby no longer crashes randomly
  
  * Units
    * Decreased the speed of the dwarvish scout line by one.
